@@ -90,23 +90,26 @@ $(function () {
          type: 'column'
       },
       title: {
-         text: <?php if(strcmp("$startday","$endday")!=0) { echo "'".__('COST_PRICE_COMPUTE_GRAPH','highchart')." ".__('COST_PRICE_TIME','highchart')." ".$startday." ".__('COST_PRICE_TO','highchart')." ".$endday."'"; } else {
-                    echo "'".__('COST_PRICE_COMPUTE_GRAPH','highchart')." ".__('COST_PRICE_FOR_DAY','highchart')." ".$startday."'"; } ?>
+         useHTML: true,
+         text: <?php if(strcmp("$startday","$endday")!=0) { echo "'".__('COST_PRICE_COMPUTE_GRAPH')." ".__('COST_PRICE_TIME')." ".$startday." ".__('COST_PRICE_TO')." ".$endday."'"; } else {
+                    echo "'".__('COST_PRICE_COMPUTE_GRAPH')." ".__('COST_PRICE_FOR_DAY')." ".$startday."'"; } ?>
       },
       subtitle: {
          text: ''
       },
       lang: {
-            printButtonTitle: <?php echo "'".__('PRINT_HIGHCHART','highchart')."',"; ?>
-            exportButtonTitle: <?php echo "'".__('EXPORT_HIGHCHART','highchart')."',"; ?>
-            downloadPNG : <?php echo "'".__('EXPORT_PNG','highchart')."',"; ?>
-            downloadJPEG : <?php echo "'".__('EXPORT_JPEG','highchart')."',"; ?>
-            downloadPDF : <?php echo "'".__('EXPORT_PDF','highchart')."',"; ?>
-            downloadSVG : <?php echo "'".__('EXPORT_SVG','highchart')."',"; ?>
-            resetZoom : <?php echo "'".__('RESET_ZOOM','highchart')."',"; ?>
-            resetZoomTitle : <?php echo "'".__('RESET_ZOOM_TITLE','highchart')."'"; ?>
+            useHTML: true,
+            printButtonTitle: <?php echo "'".__('PRINT_HIGHCHART')."',"; ?>
+            exportButtonTitle: <?php echo "'".__('EXPORT_HIGHCHART')."',"; ?>
+            downloadPNG : <?php echo "'".__('EXPORT_PNG')."',"; ?>
+            downloadJPEG : <?php echo "'".__('EXPORT_JPEG')."',"; ?>
+            downloadPDF : <?php echo "'".__('EXPORT_PDF')."',"; ?>
+            downloadSVG : <?php echo "'".__('EXPORT_SVG')."',"; ?>
+            resetZoom : <?php echo "'".__('RESET_ZOOM')."',"; ?>
+            resetZoomTitle : <?php echo "'".__('RESET_ZOOM_TITLE')."'"; ?>
       },
       xAxis: {
+         useHTML: true,
          categories: [
             '<?php echo __('REAL_PRICE','highchart'); ?>',
             '<?php echo __('THEORICAL_PRICE','highchart'); ?>'
@@ -116,16 +119,21 @@ $(function () {
          min: 0,
          alternateGridColor: '#FDFFD5',
          title: {
-            text: '<?php echo __('INSTALLATION_PRICE','highchart'); ?>'
+            useHTML: true,
+            text: '<?php echo __('INSTALLATION_PRICE'); ?>'
          }
       },
       credits: {
             enabled: false
       },
       tooltip: {
+         useHTML: true,
          formatter: function() {
             return ''+ this.y +'<?php if(strcmp("$lang","en_GB")!=0) { echo "€"; } else { echo "£"; } ?>';
          }
+      },
+      legend: {
+        useHTML: true
       },
       plotOptions: {
          column: {
